cambio cordova.js por phonegap.js

--- a/www/category.html
+++ b/www/category.html
@@ -39,7 +39,7 @@
 			// carga condicional del script, porque si lo pruebo en la pc no me funciona
 			//alert(bigscreen); // 640 en el emulador
 			if( bigscreen < 900 ){
-				document.write('<script src="cordova.js"><\/script>');
+				document.write('<script src="phonegap.js"><\/script>');
 			}
 		</script>
 
