agrego phonegap.js

--- a/www/logout.html
+++ b/www/logout.html
@@ -1,4 +1,5 @@
 Gracias por utilizar Trade Audit
+<script src="phonegap.js"></script>
 <script>
 	setTimeout( navigator.app.exitApp() , 5000 );
 </script>
