muevo el config.xml adentro de www

--- a/www/logout.html
+++ b/www/logout.html
@@ -1,5 +1,7 @@
 Gracias por utilizar Trade Audit
 <script src="phonegap.js"></script>
 <script>
-	setTimeout( navigator.app.exitApp() , 5000 );
+	if ( typeof navigator.app != "undefined" ){
+		setTimeout( navigator.app.exitApp() , 5000 );
+	}
 </script>
